--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
+    "sequelize-paginate": "^1.1.6",
     "winston": "^3.8.2"
   },
   "devDependencies": {
